# satops

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: GEM10  atm_exp_model.txt  earthgram.patch  kernels.tm
docs/: CMakeLists.txt  Doxyfile.in  README.md
examples/: CMakeLists.txt  cubesat.cpp
include/SatOps/: AtmModel.h  Atmosphere.h  Body.h  EnvironmentModel.h  GravitationalField.h  Gyroscope.h  MagneticField.h  Magnetometer.h  Matrix.h  Quaternion.h  ReferenceFrame.h  SatOps.h  Sensor.h  Sim.h  Spacecraft.h  StateVector.h  Vector.h  constants.h  dimensions.h
src/: Atmosphere.cpp  CMakeLists.txt  EnvironmentModel.cpp  EqMotion.cpp  EqMotion.h  GravitationalField.cpp  Gyroscope.cpp  Integrator.cpp  Integrator.h  MagneticField.cpp  Magnetometer.cpp  PotentialField.cpp  PotentialField.h  Quaternion.cpp  Sim.cpp  Spacecraft.cpp  StateVector.cpp  transformations.h
src/dimensions/: Acceleration.cpp  Acceleration.h  AngularAcceleration.cpp  AngularAcceleration.h  AngularVelocity.cpp  AngularVelocity.h  Area.cpp  Area.h  BaseDimension.cpp  BaseDimension.h  Distance.cpp  Distance.h  Mass.cpp  Mass.h  Time.cpp  Time.h  Velocity.cpp  Velocity.h
tests/: CMakeLists.txt  test_dimensions.cpp  test_env_model.cpp  test_matrix.cpp  test_potential_fields.cpp  test_quaternion.cpp  test_state_vector.cpp  test_vector.cpp
